# zweig-chess-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: README.md
data/: README.md
docs/: 01-Architecture-and-Design.md  02-Data-Engineering.md  03-Training-Strategy.md  04-Benchmarks-and-Results.md
scripts/: data_pipeline.py  inference.py  trainer.py
src/: __init__.py  config.py  dataset.py  evaluate.py  model.py  train.py  utils.py
tests/: __init__.py  test_model.py
